# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.516 2006/01/18 14:00:12 wolf31o2 Exp $

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc18.

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/livecd_stage2_target.py:
  Added livecd/volid to valid_values.

  17 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  remove extra function that was converting strings to lists unnecessarily

  17 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc17.

  17 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
  modules/stage4_target.py:
  fix issue where args not allowed that arose due to earlier myspec addlargs bug

  17 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-preclean-chroot.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/support/chroot-functions.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh:
  Added function to cleanup stray /etc/distcc/hosts files.

  16 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/bootloader-setup.sh:
  Added fix from bug #119123.  This is catalyst 2.0_rc16.

  16 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh, targets/support/netboot2-final.sh:
  Fixing some spacing.  This is catalyst 2.0_rc15.

  16 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/functions.sh:
  Attempt to fix bug #117649

  16 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fixes for bugs #119009, #119041 and #118985

  13 Jan 2006; Eric Edgar <rocket@gentoo.org>